--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,8 @@ on:
     push:
         branches:
             - main # or 'master' if that's your default
+permissions:
+    contents: write
 
 jobs:
     build-and-deploy:
