--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,30 +3,36 @@ name: Deploy to GitHub Pages
 on:
     push:
         branches:
-            - main # or 'master' if that's your default
+            - main # or your default branch
+
 permissions:
-    contents: write
+    contents: write # This gives write access to push the code
 
 jobs:
     build-and-deploy:
         runs-on: ubuntu-latest
 
         steps:
-            - name: Checkout 🛎️
+            - name: Checkout repo
               uses: actions/checkout@v3
 
-            - name: Setup Node.js 🔧
+            - name: Setup Node.js
               uses: actions/setup-node@v3
               with:
-                  node-version: 18
+                  node-version: "18"
 
-            - name: Install Dependencies 📦
+            - name: Install dependencies
               run: npm install
 
-            - name: Build Vite App 🏗️
+            - name: Build site
               run: npm run build
+              env:
+                  VITE_RECAPTCHA_SITE_KEY: ${{ secrets.VITE_RECAPTCHA_SITE_KEY }}
+                  VITE_EMAILJS_PUBLIC_KEY: ${{ secrets.VITE_EMAILJS_PUBLIC_KEY }}
+                  VITE_EMAILJS_TEMPLATE_ID: ${{ secrets.VITE_EMAILJS_TEMPLATE_ID }}
+                  VITE_EMAILJS_SERVICE_ID: ${{ secrets.VITE_EMAILJS_SERVICE_ID }}
 
-            - name: Deploy to GitHub Pages 🚀
+            - name: Deploy to GitHub Pages
               uses: peaceiris/actions-gh-pages@v3
               with:
                   github_token: ${{ secrets.GITHUB_TOKEN }}
